frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-app-8xcellence-20260925-1454
  namespace: core-app-8xcellence-20260925-1454
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-app-8xcellence-20260925-1454
  template:
    metadata:
      labels:
        app: core-app-8xcellence-20260925-1454
    spec:
      containers:
        - name: core-app-8xcellence-20260925-1454
          image: 179678238458.dkr.ecr.eu-west-3.amazonaws.com/cnp-app:core-app-8xcellence-20260925-1454-latest
          ports:
            - containerPort: 80
