frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-app-8xcellence-20260925-1454
  namespace: core-app-8xcellence-20260925-1454
spec:
  type: ClusterIP
  selector:
    app: core-app-8xcellence-20260925-1454
  ports:
    - port: 80
      targetPort: 80
